argocd/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: last-one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: last-one
  template:
    metadata:
      labels:
        app: last-one
      annotations:
        redeploy-timestamp: '2025-05-26T21:08:36'
    spec:
      containers:
        - name: last-one
          image: bilel06/last-one:latest
          ports:
            - containerPort: 80
