argocd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: default
spec:
  selector:
    app: last-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
